--- a/public/404.html
+++ b/public/404.html
@@ -211,6 +211,14 @@
   
     <li class="menu-item">
       <a
+        href="/projects/"
+        class="menu-link ">
+        Projects
+      </a>
+    </li>
+  
+    <li class="menu-item">
+      <a
         href="/about/"
         class="menu-link ">
         About
@@ -290,6 +298,14 @@
         href="/tags/"
         class="menu-link ">
         Tags
+      </a>
+    </li>
+  
+    <li class="menu-item">
+      <a
+        href="/projects/"
+        class="menu-link ">
+        Projects
       </a>
     </li>
   
