updated text in about

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -83,8 +83,8 @@
 
 <link
   rel="stylesheet"
-  href="/css/theme.min.a251f6659747f13720004e758411b578202d6d8c8dd101f6d21a21fb1bb104b2.css"
-  integrity="sha256-olH2ZZdH8TcgAE51hBG1eCAtbYyN0QH20hoh&#43;xuxBLI=">
+  href="/css/theme.min.86a32b729f656fc6c119ed69193950db815a3ad9fdc967b32c76d602f11449a4.css"
+  integrity="sha256-hqMrcp9lb8bBGe1pGTlQ24FaOtn9yWezLHbWAvEUSaQ=">
 
 <link
     rel="stylesheet"
@@ -447,32 +447,35 @@
     <div class="about-content-full">
       <h2 id="hey-im-toby-alexander-west-mietke-hartzberg">Hey! I’m Toby Alexander West Mietke Hartzberg</h2>
 <p>I’m currently studying to become an AP in Computer Science. I’m in my 3rd term, where most of my time is spent building projects, learning new technologies, and occasionally questioning why something that worked five minutes ago suddenly doesn’t anymore.</p>
-<p>This site is my personal blog and a place where I document my journey, especially my weekly progress on my term projects. but also side projects, experiments, and random technical deep dives when something interesting (or frustrating) comes up.</p>
-<p>I’m especially interested in backend development, APIs, and figuring out how things work under the hood. I like structured problems, clean solutions, and setups that make sense without being over-engineered.</p>
-<p>When I’m not coding or studying, I’m usually gaming. I’ve always loved games and game worlds, both playing them and being curious about how they’re built. Gaming is also where I tend to recharge when my brain needs a break.</p>
+<p>This site is my personal blog and a place where I document my journey, especially my weekly progress on my term projects, but also side projects, experiments, and random technical deep dives when something interesting (or frustrating) comes up.</p>
+<p>I’m especially interested in backend development, APIs, and figuring out how things work under the hood. I like structured problems, clean solutions, and setups that make sense without being over-engineered (although, who doesnt like going a bit over the top sometimes..).</p>
+<p>When I’m not coding or studying, I’m usually gaming. I’ve always loved games and the worlds inside of them, both playing them and being curious about how they’re built. Gaming is also where I tend to recharge when my brain needs a break.</p>
 <p>I share my everyday life with my wife Julie-Thilde, our two dogs and four budgies:</p>
 <ul>
 <li>
-<p>Buller, chihuahua/chinese crested powderpuff/bichon havanese (what a ), who’s 10 years old and very much acts like it (he&rsquo;s the one in charge!)</p>
+<p>Buller, chihuahua/chinese crested powderpuff/bichon havanese (what a mix), who’s 10 years old and very much acts like it (he&rsquo;s the one in charge!)</p>
 </li>
 <li>
-<p>Alfred, almost 9, and still convinced he’s a puppy.. Loves to eat! And prefferably our food..</p>
+<p>Alfred, shih tzu/chihuahua (so just a smaller shih tzu), almost 9 years old, and still convinced he’s a puppy.. Loves to eat! And prefferably our food..</p>
 </li>
 <li>
 <p>Albi, albino-budgie, shes the fat snowball in the flock, also the oldest, so no one ever messes with her!</p>
 </li>
 <li>
-<p>Trille, shes the yellow bird thats always just haning out, present, physically, not mentally.. xD</p>
+<p>Trille, shes the yellow bird thats always just hanging out, present, physically, not mentally.. xD</p>
 </li>
 <li>
 <p>Bølle, the green &ldquo;standard&rdquo;, he&rsquo;s married to Albi! But occasionally, he tries to get it on with Trille, buuut</p>
 </li>
 <li>
-<p>Mokke! Neon blue/green/turqoise (dont get me started on colors.. im a guy!) He&rsquo;s the real deal, in an open relationship with Trille, but she aint in one with him, so guess whos fighting when she gets the attention</p>
+<p>Mogge! Neon blue/green/turqoise (dont get me started on colors.. im a guy!) He&rsquo;s the real deal, in an open relationship with Trille, but she aint in one with him, so guess whos fighting when she gets the attention!</p>
+</li>
+<li>
+<p>Julle (as I call her, if its not <em>honey</em>, <em>babe</em>, <em>my love</em> etc.), we&rsquo;ve been together for almost 11 years, best friends 5 years prior to that, she still is my best friend, my biggest inspiration and truly the love of my life!</p>
 </li>
 </ul>
-<p>They’re a big part of my life and a great encouragement for me to .</p>
-<p>If you’re here to follow my projects, learn alongside me, or just see what I’m working on, welcome. I’m glad you’re here.</p>
+<p>They’re the greatest part of my life and the biggest encouragement for me to push my limits.</p>
+<p>If you’re here to follow my projects, learn alongside me, or just see what I’m working on, welcome! I’m glad you’re here!</p>
 
     </div>
   </article>
@@ -600,7 +603,7 @@
 
 
 
-<script src="/js/main.min.cdc6a3c4f498c0556bc507848c493a55af2da9b14233c21300b240b89857180d.js" defer></script>
+<script src="/js/main.min.5809f4b25863ee26413f19a2183716d6a5b52e3a8bd308a7dd764fb5bd4d6d36.js" defer></script>
 
   </body>
 </html>
